<resources>
    <string name="app_name">Pegs</string>

    <string name="start">Start</string>
    <string name="scores">Hall of Fame</string>
    <string name="settings">Settings</string>

    <string name="tst_illegal_move">Illegal Move</string>
    <string name="defaultPeg">1</string>
    <string name="pegs_left">Pegs Left</string>

    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to HighScores -->

    <string name="name">Name</string>
    <string name="date">Date</string>

    <!-- strings for end of game  -->
    <string name="game_dialog_congrats">Congratulations!</string>
    <string name="game_congrats_message">Add your name to Hall of Fame</string>
    <string name="game_ok">Ok</string>

    <!-- pref strings-->
    <string name="pref_header_game_peg">peg preferences</string>
    <string name="pref_header_game_sound">game sounds</string>
    <string name="pref_header_high_score">clear highScores</string>

    <!-- preference strings   -->
    <string name="pref_name_key">Name</string>
    <string name="pref_name_title">User name</string>
    <string name="pref_name_summary">A unique user name that no one else will be allowed to use</string>
    <string name="pref_name_default">kevin</string>


    <!-- GOTTA DO SOMETHING WITH THIS -->

    <!-- Strings related to Settings -->



    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>



    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_game_peg_settings">peg game settings</string>

    <!-- Example settings for Notifications -->


    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pegs_title">Pegs title</string>


    <string name="pref_music">music </string>
    <string name="pref_music_summary">turns the music on and off</string>
    <string name="pref_music_key">music </string>



    <string name="pref_sound_effects">Sound Effects </string>
    <string name="pref_sound_effects_summary">Turns the sound effects on and off</string>
    <string name="pref_sound_effects_key">soundEffects </string>


    <string name="reset_high_score">HighScore</string>
    <string name="reset_high_score_summary">Reset</string>
    <string name="reset_key">reset</string>
    <string name="reset_onClick">onResetClick </string>

    <string name="reset_yes">Yes</string>
    <string name="reset_no">No</string>

    <string name="reset_dialog">Are you sure</string>
    <string name="reset_header">High Score reset</string>


</resources>
