<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#C1F3FC"
    tools:context="com.shanekevinsam.pegs.MainActivity">

    <Button
        android:id="@+id/btn_startGame"
        android:text="@string/start"
        android:drawableLeft="@drawable/play2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="startGameActivity"
        android:layout_above="@+id/btn_seeScores"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/btn_seeScores"
        android:text="@string/scores"
        android:drawableLeft="@drawable/star2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="startScoreActivity"
        android:layout_above="@+id/btn_settings"
        android:layout_alignLeft="@+id/btn_startGame"
        android:layout_alignStart="@+id/btn_startGame" />
    <Button
        android:id="@+id/btn_settings"
        android:text="@string/settings"
        android:drawableLeft="@drawable/settings2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:onClick="startSettingsActivity"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btn_seeScores"
        android:layout_alignStart="@+id/btn_seeScores"
        android:layout_marginBottom="45dp" />



    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/pegs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pegs_title"
        android:layout_marginBottom="47dp"
        android:layout_above="@+id/btn_startGame"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
